# pardus-java-installer

./: .gitignore  README.md  meson.build  pardus-java-installer  setup.py  tr.org.pardus.java-installer.desktop  tr.org.pardus.pkexec.pardus-java-installer.policy  update-translations.sh
debian/: changelog  control  copyright  meson.build  pardus-java-installer.lintian-overrides
po/: LINGUAS  es.po  files  pardus-java-installer.pot  pt.po  tr.po
polkit/: meson.build  tr.org.pardus.pkexec.pardus-java-installer.policy
src/: Actions.py  Arch.py  Dialogs.py  Main.py  MainWindow.py  PackageManager.py  ProgressWindow.py  __version__  main.py
translations/: compile_translations.sh  pt.po  tr.po  translation.pot
translations/tr/LC_MESSAGES/: pardus-java-installer.mo
ui/: MainWindow.glade  ProgressWindow.glade
